--- a/assets/scss/layout/grid.scss
+++ b/assets/scss/layout/grid.scss
@@ -5,13 +5,16 @@
     box-sizing: border-box;
     width: 100%;
     max-width: 74rem;
-    margin: 3rem auto;
-    padding: 0 1rem;
-    row-gap: 2rem;
+    margin: 1rem auto;
+    padding: 0;
+    row-gap: 1.5rem;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: min-content;
 
     @include break(54rem) {
+        margin: 3rem auto;
+        padding: 0 1rem;
+        row-gap: 2rem;
         column-gap: 2rem;
     }
 }
